--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
     "sass": "node-sass --watch src/styles/scss -o src/styles",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix --ext .js,.jsx ."
@@ -43,6 +44,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "cypress": "^12.17.4",
+    "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-jest": "^27.2.3"
   }
 }
